# anthonyhashemi-national-archives-django-code-test

./: .gitignore  README.md  manage.py  pytest.ini
national-archives-django-code-test/: .gitignore  README.md  manage.py  pyproject.toml
national-archives-django-code-test/records/: models.py  views.py
national-archives-django-code-test/records/management/commands/: import_tna_record_data.py
national-archives-django-code-test/records/migrations/: 0001_initial.py
national-archives-django-code-test/records/tests/: record_data_with_citable_reference.json  record_data_with_no_sufficient_information.json  record_data_with_scope_content_description.json  record_data_with_title.json  test_import_tna_record_data.py  test_record_view.py
national-archives-django-code-test/tna_project/: asgi.py  settings.py  urls.py  wsgi.py
records/: models.py  views.py
records/management/commands/: import_tna_record_data.py
records/migrations/: 0001_initial.py
records/tests/: record_data.json  test_import_tna_record_data.py  test_record_view.py
tna_project/: settings.py  wsgi.py
