[tool.poetry]
name = "national-archives-django-code-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "national_archives_django_code_test"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
